Recipe oefening 2https://github.com/EHB-MCT/web1-exercise-02-recipes-YasinCardak.git

--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Recepten │ Pasta gremolata met ricotta</title>
+	</head>
+	<body>
+		<h1>Spaghetti Bolognese</h1>
+		<img src="images/pasta.webp" alt="" />
+	</body>
+</html>
+
+<ul>
+	<li>500g spahghetti</li>
+	<li>200g gehakt</li>
+	<li>1 blik tomaten</li>
+</ul>
+
+<ul>
+	<li>
+		<a href="https://voorbeeld.com/spaghetti" target="_blank">500g spaghetti</a>
+	</li>
+	<li>
+		<a href="https://voorbeeld.com/gehakt" target="_blank">200g gehakt</a>
+	</li>
+	<li>
+		<a href="https://voorbeeld.com/tomaten" target="_blank">1 blik tomaten</a>
+	</li>
+</ul>
+
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body></body>
+</html>
+
+<h2>ingedrienten</h2>
+<ul>
+	<li>500g spaghetti</li>
+	<li>200g gehakt</li>
+	<li>1 blik tomaten</li>
+	<li>1 ui, gesnipperd</li>
+	<li>2 teentjes knoflook, fijngehakt</li>
+	<li>Olijfolie</li>
+	<li>Zout en peper naar smaak</li>
+</ul>
+
+<h2>Bereiding</h2>
+
+<ol>
+	<li>Kook de spaghetti volgens de aanwijzingen op de verpakking.</li>
+	<li>
+		Verhit een beetje Olijfoliein een pan en bak de uit en knoflook tot ze
+		glazig zijn.
+	</li>
+	<li>Voeg het gehakt toe en bak het bruin.</li>
+	<li>Voeg het blik tomaten toe en laat het geheel 15 minuten sudderen.</li>
+	<li>Breng op smaak met zout en peper.</li>
+	<li>Serveer de saus over de spaghetti.</li>
+</ol>
