--- a/kebab.html
+++ b/kebab.html
@@ -30,9 +30,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 	</head>
-	<body>
-		hello World
-	</body>
+	<body></body>
 </html>
 
 <h2>ingedrienten</h2>
